chore: update dependencies and docs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-fastapi
-uvicorn
-sqlalchemy
-psycopg2-binary
-httpx
-sentence-transformers
+beautifulsoup4
 faiss-cpu
+fastapi
+google-api-python-client
+httpx
 numpy
 openai
-python-dotenv
-youtube-transcript-api
-google-api-python-client
-requests
-beautifulsoup4
 playwright
+psycopg2-binary
+pydantic
 pydantic-settings
+pytest
+python-dotenv
+requests
+sentence-transformers
+sqlalchemy
+uvicorn
+youtube-transcript-api
+
