--- a/analytics/backend/package.json
+++ b/analytics/backend/package.json
@@ -7,18 +7,29 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "dependencies": {
+    "zod": "^3.22.4",
     "cors": "^2.8.5",
+    "@prisma/client": "^5.9.1",
     "dotenv": "^16.4.5",
+    "helmet": "^7.0.0",
     "express": "^4.19.2",
     "pg": "^8.11.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
+    "prisma": "^5.9.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/pg": "^8.15.6",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "eslint": "^8.57.0",
