--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ analytics/backend/node_modules/
 analytics/frontend/node_modules/
 analytics/frontend/dist/
 !analytics/frontend/src/lib/
-!analytics/frontend/src/lib/api.ts
+!analytics/frontend/src/lib/api.js
 
 # Data files
 /data/*.index
