--- a/analytics/frontend/package.json
+++ b/analytics/frontend/package.json
@@ -6,24 +6,25 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0 --port 4173",
     "build": "vite build",
-    "preview": "vite preview --host 0.0.0.0 --port 4173"    
+    "preview": "vite preview --host 0.0.0.0 --port 4173"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.7",
-    "react-router-dom": "^6.21.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.18",
+    "eslint": "^8.56.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "eslint": "^8.56.0",
     "vite": "^5.2.10"
   }
 }
