--- a/analytics/frontend/package.json
+++ b/analytics/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.7",
+    "react-is": "^19.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
