--- a/analytics/backend/Dockerfile
+++ b/analytics/backend/Dockerfile
@@ -9,5 +9,8 @@ RUN apk add --no-cache openssl
 # Copy source code
 COPY . .
 
+# Generate Prisma client
+RUN npx prisma generate
+
 EXPOSE 4001
 CMD ["npm", "run", "dev"]
