black coding style

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,10 @@ requests
 sqlalchemy
 uvicorn
 youtube-transcript-api
-
+langgraph
+langchain
+langchain-openai
+langchain-community
+langgraph-prebuilt
+langgraph-sdk
+langgraph-checkpoint-sqlite
